2008-04-19  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Added
	SetupPointer. Added Framework for specifying groups using OBBitVec for
	now until we have OBGroup/OBFragment. Documentation example using
	groups. 
	The *RotorSearch functions should call SetupPointers when they change
	conformer. This will update the pointers to the atom positions in the
	OBFFCalculation(s). This solves some weird results when the rotor
	search functions were used with MMFF94 or ghemical. UFF doesn't have
	this problem because it still uses the vector3 class.

	* src/forcefields/forcefieldmmff94.*: Added SetupPointer.
	SetupCalculations() now checks the intra and inter groups.

	* src/forcefields/forcefieldghemical.*: Added SetupPointer.

2008-04-19  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/grid.h, src/grid.cpp,
	include/openbabel/griddata.h, src/griddata.cpp: Now using std::vector
	to store data internally. Made safer where possible.

	* src/formats/gausscubeformat.cpp: Cleaned up support for reading in
	multiple cubes - large cube files can now be read in.

	* src/formats/gausscubeformat.cpp: Worked on improvements to the cube
	writing function. It now staggers cubes in the z correctly and I think
	I got the rest of it lining up correctly now. Enabled.

	* configure.in, src/config.h.in: Updates to the auto* build tools,
	added HAVE_GCC_VISIBILITY logic and the defines to use it.

2008-04-15  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPython: removed
	* windows-vc2005/OBPythonOBF: added setup.py,
	openbabel_postinstall.py, Readme.txt and logo.bmp

2008-04-15 Chris Morley

	* tools/obchiral.cpp, tools/obenergy.cpp, tools/obfit.cpp,
	tools/obminimize.cpp, tools/obmm.cpp, tools/obprobe.cpp,
	tools/obprop.cpp, tools/obsym.cpp:
	don't #include <#include <unistd.h> in Windows build
	
	* windows-vc2005/OBTools.sln, windows-vc2005/OBTools,
	windows-vc2005/OBTools/*.proj: New build files for tools exes