@@ -15,29 +15,30 @@ Install SWIG. Actually all that is needed is swig.exe which is
 downloaded together with the source files and documentation.
 Add its folder name to one of the PATH environment variables.
 
-The project OBPython does the following:
+The project OBPythonOBF does the following:
  - It runs SWIG on the interface file scripts/openbable-python.i
     producing openbabel-python_wrap.cpp and openbabel.py
- - openbabel-python_wrap.cpp is compiled and linked with OpenBabelDLL.lib
-    to produce the DLL _openbabel.pyd
- - OpenBabelDLL.dll is copied to the OBPython folder
+ - openbabel-python_wrap.cpp is compiled and linked with OBConv.lib, OBDLL.lib,
+    and some other OB libs, to produce the DLL _openbabel.pyd
+ - all the python files are copied to the windows-vc2005 folder where the
+    OB exe, dll and obf files are. 
  
 There is only a release configuration.
 The SWIG step is not currently automatically rerun when any of the
 OpenBabel files changes. If they have, you need to Rebuild the
-OBPython project, which will also rebuild OpenBabelDLL first.
+OBPythonOBF project, which will also rebuild several OpenBabel DLLs first.
 
 A useful article on building C++ extensions for Python is at
 http://www.geocities.com/foetsch/python/extending_python.htm
 
 Original notes:
  To use OpenBabel with Python either 
-  run Python with the OBPython folder as the current folder, or
-  add the OBPython folder to the PYTHONPATH environment variable.
+  run Python with the windows-vc2005 folder as the current folder, or
+  add the windows-vc2005 folder to the PYTHONPATH environment variable.
 
 New notes:
  To create a binary installer for the Python extension, do as follows...
- In the OBPython folder, run
+ In the OBPythonOBF folder, run
      python setup.py bdist_wininst
                      --install-script=openbabel_postinstall.py
                      --bitmap=logo.bmp
